[package]
name = "dacloud"
version = "0.1.0"
authors = ["David Carlier <devnexen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curl = "*"
json = "*"
clap = "*"
rust-crypto = "*"
lru-cache = "*"
serde = {version = "*", features = ["derive"]}
